--- a/src/views/KamaeView.css
+++ b/src/views/KamaeView.css
@@ -21,8 +21,8 @@
 
 .kamae-title-block {
     position: fixed;
-    top: 1.5rem;
-    right: 1.5rem;
+    top: 3.5rem;
+    right: 1.25rem;
     text-align: right;
     user-select: none;
     -webkit-user-select: none;
